app/static/css/custom.css
/* ... */
*/

/* Lists 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
ul, ol {
    list-style: circle outside;
    margin-left: 1em;
}
ol ol {
    list-style-type: lower-alpha;
}
dl dt {
    margin-bottom: 1.5em;
}
dl dd {
    margin-bottom: 2em;
}


/* Blockquotes 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
blockquote {
    border-left: 3px solid #222;
    margin-left: 0;
    padding-left: 2.4rem;
    font-style: oblique;
    font-size: larger;
}

/* Code 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
code {
    background: #fbfaf9;
    border-color: #e5e5e5;
}
pre {
    padding: 10px 0 10px 15px;
    color: #fff;
    background-color: #161310;
    overflow-x: auto;
    font-size: small;
    text-align: left;
    border-radius: 4px;
}

/* Animations
–––––––––––––––––––––––––––––––––––––––––––––––––– */
@keyframes fade-in {
    from { opacity: 0; }
    to   { opacity: 1; }
}
@keyframes slide-down {
    from { margin-top: -10%; }
    to   { margin-top: 0%; }
}
@keyframes slide-up {
    from { margin-top: 0%; }
    to   { margin-top: -10%; }
}

